[project]
name = "imbalance-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
]
